--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,17 @@
         </activity>
 
         <activity android:name=".activity.CarDetailsActivity"/>
-
+        <activity
+            android:name="com.zaaach.citypicker.CityPickerActivity"
+            android:theme="@style/CityPicker.NoActionBar"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateHidden|adjustPan"/>
+        <activity android:name=".activity.MsgActivity"/>
+        <activity android:name=".activity.DetailDeliverCar" android:launchMode="singleTop"/>
+        <activity android:name=".activity.DetailDeliverGoods" android:launchMode="singleTop"/>
+        <activity android:name=".activity.DetailYunDan" android:launchMode="singleTop"/>
+        <activity android:name=".activity.DetailYunJia" android:launchMode="singleTop"/>
+        <activity android:name=".activity.ListDetailActivity" android:launchMode="singleTop"/>
     </application>
 
 </manifest>
